2006-12-20  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/Makefile.am:
	* Sato/matchbox/theme.xml:
	Add rough dialog styalising
