@@ -1,3 +1,8 @@
+2006-12-22  Matthew Allum  <mallum@openedhand.com>
+
+	* Sato/matchbox/theme.desktop.in:
+	Remove old clearlooks config
+
 2006-12-20  Matthew Allum  <mallum@openedhand.com>
 
 	* Sato/matchbox/Makefile.am:
